@@ -14,6 +14,7 @@ import org.apache.hadoop.mapreduce.Counters;
 import org.apache.log4j.Logger;
 
 import java.io.IOException;
+import java.lang.reflect.InvocationTargetException;
 import java.util.Collection;
 import java.util.Map;
 
@@ -120,8 +121,8 @@ public class CountersAggregatingIterator extends WrappingIterator implements Opt
     public SortedKeyValueIterator<Key,Value> deepCopy(IteratorEnvironment env) {
         CountersAggregatingIterator copy;
         try {
-            copy = getClass().newInstance();
-        } catch (InstantiationException | IllegalAccessException e) {
+            copy = getClass().getDeclaredConstructor().newInstance();
+        } catch (InstantiationException | IllegalAccessException | NoSuchMethodException | InvocationTargetException e) {
             // Shouldn't happen so just throw as a runtime exception
             throw new RuntimeException(e);
         }
